--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,8 @@ h1 {
     grid-template-columns: repeat(3, 1fr);
     padding: 10px;
 }
+
+.tecla_aplausos{
+    width: 100px;
+    justify-content: center;
+}
