--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ h1 {
 }
 
 .teclado {
+    align-self: center;
     background: linear-gradient(to bottom, #eeeeee 0%, #cccccc
     100%);
     box-shadow: 6px 8px 0 6px #666, 10px 10px 10px #000;
